# UMBControllerLib

./: CHANGELOG.txt  CMakeLists.txt  LICENCE.md  LICENSE.md  README.md
example/: CMakeLists.txt  ComLinux.cpp  ComLinux.h  ComWin.cpp  ComWin.h  UmbCtrlTest.cpp
example/win/: stdafx.h
example/win/pthread/: pthreadVC3-w32.lib  pthreadVC3-w64.lib
example/win/serialport/: SerialPort.h
include/: UmbControllerLib.h  Umb_Types.h
lib/: UmbControllerLib.lib  UmbControllerLib_32.lib  libUmbControllerLib.so.0.4  libUmbControllerLibArm_32.so.0.4  libUmbControllerLibArm_64.so.0.4  libUmbControllerLib_32.so.0.4
